Trying to fix navbar height issue on ios

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -79,9 +79,3 @@
     font-feature-settings: 'rlig' 1, 'calt' 1;
   }
 }
-
-@supports (-webkit-touch-callout: none) {
-  .min-h-screen {
-    min-height: -webkit-fill-available;
-  }
-}
